framec_tests/language_specific/cpp/v3_outline/negative/multi_issue_outline_tolerant.frm
@target cpp

system S {
    machine:
        $A
        e() {
            => $^ oops
            -> $ZZ();
        }
}

